// Jest Snapshot v1, https://goo.gl/fbAQLP
//upd

exports[`ProfileSection renders default state 1`] = `
<div>
  <div>
    <div
      class="sc-eCAqax dsDUlS"
    >
      <label
        class="sc-gKAaef ezzMKi"
        for=":r0:"
      >
        <span
          class="ant-avatar ant-avatar-circle ant-avatar-icon css-var-root ant-avatar-css-var css-dev-only-do-not-override-1daqxe2"
          style="width: 100%; height: 100%; font-size: 60px; pointer-events: none;"
        >
          <span
            aria-label="user"
            class="anticon anticon-user"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="user"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
              />
            </svg>
          </span>
        </span>
        <div
          class="sc-jSFipO ccAAWF"
        >
          <span>
            сменить
            <br />
            аватар
          </span>
        </div>
      </label>
      <input
        accept="image/*"
        class="sc-iCoHzw ggvqiy"
        id=":r0:"
        type="file"
      />
    </div>
    <form
      class="ant-form ant-form-horizontal css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 sc-fujznN jQyIbl"
    >
      <div
        class="ant-form-item css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 0 0 180px;"
          >
            <label
              class="ant-form-item-required"
              for="first_name"
              title="Имя"
            >
              Имя
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 1 1 auto;"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  aria-required="true"
                  class="ant-input css-dev-only-do-not-override-1daqxe2 ant-input-outlined css-var-root ant-input-css-var"
                  id="first_name"
                  placeholder="Имя"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 0 0 180px;"
          >
            <label
              class="ant-form-item-required"
              for="second_name"
              title="Фамилия"
            >
              Фамилия
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 1 1 auto;"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  aria-required="true"
                  class="ant-input css-dev-only-do-not-override-1daqxe2 ant-input-outlined css-var-root ant-input-css-var"
                  id="second_name"
                  placeholder="Фамилия"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 0 0 180px;"
          >
            <label
              class=""
              for="display_name"
              title="Отображаемое имя"
            >
              Отображаемое имя
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 1 1 auto;"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input css-dev-only-do-not-override-1daqxe2 ant-input-outlined css-var-root ant-input-css-var"
                  id="display_name"
                  placeholder="Имя в чате"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 0 0 180px;"
          >
            <label
              class="ant-form-item-required"
              for="login"
              title="Логин"
            >
              Логин
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 1 1 auto;"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  aria-required="true"
                  class="ant-input css-dev-only-do-not-override-1daqxe2 ant-input-outlined css-var-root ant-input-css-var"
                  id="login"
                  placeholder="Логин"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 0 0 180px;"
          >
            <label
              class="ant-form-item-required"
              for="email"
              title="Почта"
            >
              Почта
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 1 1 auto;"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  aria-required="true"
                  class="ant-input css-dev-only-do-not-override-1daqxe2 ant-input-outlined css-var-root ant-input-css-var"
                  id="email"
                  placeholder="email@example.com"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 0 0 180px;"
          >
            <label
              class="ant-form-item-required"
              for="phone"
              title="Телефон"
            >
              Телефон
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 1 1 auto;"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  aria-required="true"
                  class="ant-input css-dev-only-do-not-override-1daqxe2 ant-input-outlined css-var-root ant-input-css-var"
                  id="phone"
                  placeholder="+7 (999) 999-99-99"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item sc-pNWRh hwkNrj css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
        >
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 1 1 auto;"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-1daqxe2 css-var-root ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-block"
                  type="submit"
                >
                  <span>
                    Сохранить
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`ProfileSection renders with avatar src 1`] = `
<div>
  <div>
    <div
      class="sc-eCAqax dsDUlS"
    >
      <label
        class="sc-gKAaef ezzMKi"
        for=":r1:"
      >
        <span
          class="ant-avatar ant-avatar-circle ant-avatar-image ant-avatar-icon css-var-root ant-avatar-css-var css-dev-only-do-not-override-1daqxe2"
          style="width: 100%; height: 100%; font-size: 60px; pointer-events: none;"
        >
          <img
            src="https://example.com/avatar.jpg"
          />
        </span>
        <div
          class="sc-jSFipO ccAAWF"
        >
          <span>
            сменить
            <br />
            аватар
          </span>
        </div>
      </label>
      <input
        accept="image/*"
        class="sc-iCoHzw ggvqiy"
        id=":r1:"
        type="file"
      />
    </div>
    <form
      class="ant-form ant-form-horizontal css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 sc-fujznN jQyIbl"
    >
      <div
        class="ant-form-item css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 0 0 180px;"
          >
            <label
              class="ant-form-item-required"
              for="first_name"
              title="Имя"
            >
              Имя
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 1 1 auto;"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  aria-required="true"
                  class="ant-input css-dev-only-do-not-override-1daqxe2 ant-input-outlined css-var-root ant-input-css-var"
                  id="first_name"
                  placeholder="Имя"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 0 0 180px;"
          >
            <label
              class="ant-form-item-required"
              for="second_name"
              title="Фамилия"
            >
              Фамилия
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 1 1 auto;"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  aria-required="true"
                  class="ant-input css-dev-only-do-not-override-1daqxe2 ant-input-outlined css-var-root ant-input-css-var"
                  id="second_name"
                  placeholder="Фамилия"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 0 0 180px;"
          >
            <label
              class=""
              for="display_name"
              title="Отображаемое имя"
            >
              Отображаемое имя
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 1 1 auto;"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input css-dev-only-do-not-override-1daqxe2 ant-input-outlined css-var-root ant-input-css-var"
                  id="display_name"
                  placeholder="Имя в чате"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 0 0 180px;"
          >
            <label
              class="ant-form-item-required"
              for="login"
              title="Логин"
            >
              Логин
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 1 1 auto;"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  aria-required="true"
                  class="ant-input css-dev-only-do-not-override-1daqxe2 ant-input-outlined css-var-root ant-input-css-var"
                  id="login"
                  placeholder="Логин"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 0 0 180px;"
          >
            <label
              class="ant-form-item-required"
              for="email"
              title="Почта"
            >
              Почта
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 1 1 auto;"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  aria-required="true"
                  class="ant-input css-dev-only-do-not-override-1daqxe2 ant-input-outlined css-var-root ant-input-css-var"
                  id="email"
                  placeholder="email@example.com"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 0 0 180px;"
          >
            <label
              class="ant-form-item-required"
              for="phone"
              title="Телефон"
            >
              Телефон
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 1 1 auto;"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  aria-required="true"
                  class="ant-input css-dev-only-do-not-override-1daqxe2 ant-input-outlined css-var-root ant-input-css-var"
                  id="phone"
                  placeholder="+7 (999) 999-99-99"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item sc-pNWRh hwkNrj css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
        >
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 1 1 auto;"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-1daqxe2 css-var-root ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-block"
                  type="submit"
                >
                  <span>
                    Сохранить
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`ProfileSection renders with saving state 1`] = `
<div>
  <div>
    <div
      class="sc-eCAqax dsDUlS"
    >
      <label
        class="sc-gKAaef ezzMKi"
        for=":r2:"
      >
        <span
          class="ant-avatar ant-avatar-circle ant-avatar-icon css-var-root ant-avatar-css-var css-dev-only-do-not-override-1daqxe2"
          style="width: 100%; height: 100%; font-size: 60px; pointer-events: none;"
        >
          <span
            aria-label="user"
            class="anticon anticon-user"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="user"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
              />
            </svg>
          </span>
        </span>
        <div
          class="sc-jSFipO ccAAWF"
        >
          <span>
            сменить
            <br />
            аватар
          </span>
        </div>
      </label>
      <input
        accept="image/*"
        class="sc-iCoHzw ggvqiy"
        id=":r2:"
        type="file"
      />
    </div>
    <form
      class="ant-form ant-form-horizontal css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 sc-fujznN jQyIbl"
    >
      <div
        class="ant-form-item css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 0 0 180px;"
          >
            <label
              class="ant-form-item-required"
              for="first_name"
              title="Имя"
            >
              Имя
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 1 1 auto;"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  aria-required="true"
                  class="ant-input css-dev-only-do-not-override-1daqxe2 ant-input-outlined css-var-root ant-input-css-var"
                  id="first_name"
                  placeholder="Имя"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 0 0 180px;"
          >
            <label
              class="ant-form-item-required"
              for="second_name"
              title="Фамилия"
            >
              Фамилия
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 1 1 auto;"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  aria-required="true"
                  class="ant-input css-dev-only-do-not-override-1daqxe2 ant-input-outlined css-var-root ant-input-css-var"
                  id="second_name"
                  placeholder="Фамилия"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 0 0 180px;"
          >
            <label
              class=""
              for="display_name"
              title="Отображаемое имя"
            >
              Отображаемое имя
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 1 1 auto;"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input css-dev-only-do-not-override-1daqxe2 ant-input-outlined css-var-root ant-input-css-var"
                  id="display_name"
                  placeholder="Имя в чате"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 0 0 180px;"
          >
            <label
              class="ant-form-item-required"
              for="login"
              title="Логин"
            >
              Логин
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 1 1 auto;"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  aria-required="true"
                  class="ant-input css-dev-only-do-not-override-1daqxe2 ant-input-outlined css-var-root ant-input-css-var"
                  id="login"
                  placeholder="Логин"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 0 0 180px;"
          >
            <label
              class="ant-form-item-required"
              for="email"
              title="Почта"
            >
              Почта
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 1 1 auto;"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  aria-required="true"
                  class="ant-input css-dev-only-do-not-override-1daqxe2 ant-input-outlined css-var-root ant-input-css-var"
                  id="email"
                  placeholder="email@example.com"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
        >
          <div
            class="ant-col ant-form-item-label css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 0 0 180px;"
          >
            <label
              class="ant-form-item-required"
              for="phone"
              title="Телефон"
            >
              Телефон
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 1 1 auto;"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  aria-required="true"
                  class="ant-input css-dev-only-do-not-override-1daqxe2 ant-input-outlined css-var-root ant-input-css-var"
                  id="phone"
                  placeholder="+7 (999) 999-99-99"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item sc-pNWRh hwkNrj css-var-root ant-form-css-var css-dev-only-do-not-override-1daqxe2 ant-form-item-horizontal"
      >
        <div
          class="ant-row ant-form-item-row css-dev-only-do-not-override-1daqxe2 css-var-root"
        >
          <div
            class="ant-col ant-form-item-control css-dev-only-do-not-override-1daqxe2 css-var-root"
            style="flex: 1 1 auto;"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-1daqxe2 css-var-root ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-loading ant-btn-block"
                  type="submit"
                >
                  <span
                    class="ant-btn-icon ant-btn-loading-icon"
                  >
                    <span
                      aria-label="loading"
                      class="anticon anticon-loading anticon-spin"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="loading"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span>
                    Сохранить
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
